# array-rs

./: .code-workspace  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  makefile
aggregation/: Cargo.toml
aggregation/src/: lib.rs
api/: Cargo.toml
api/src/: lib.rs
blockchain/: Cargo.toml
blockchain/chain-api/: Cargo.toml
blockchain/chain-api/src/: main.rs
blockchain/common-rpc/: Cargo.toml
blockchain/common-rpc/src/: batch.rs  connection_pool.rs  lib.rs  rpc.rs
blockchain/drift/: Cargo.toml
blockchain/drift/idls/: drift.json  drift_old.json
blockchain/drift/src/: client.rs
blockchain/drift/src/math/: constants.rs
blockchain/drift/src/models/: idl.rs  spot_market.rs
blockchain/idls/: kamino_lending_upgraded.json
blockchain/sol-interface/: Cargo.toml
blockchain/sol-interface/src/: aggregator.rs  lib.rs
blockchain/sol-interface/src/aggregator/: client.rs  from.rs  markets.rs  mod.rs  obligations.rs  utils.rs  wallet.rs
blockchain/sol-interface/src/aggregator/normalize/: config.rs  mod.rs  pool_liquidity.rs  rate.rs  scale_factor.rs  shift.rs  tests.rs
blockchain/sol-interface/src/common/: client_trait.rs  mod.rs  rpc_utils.rs
blockchain/sol-interface/src/kamino/: client.rs
blockchain/sol-interface/src/kamino/models/: lending_market.rs  obligation.rs  reserve.rs
blockchain/sol-interface/src/kamino/utils/: borrow_rate_curve.rs  consts.rs  errors.rs
blockchain/sol-interface/src/marginfi/: client.rs
blockchain/sol-interface/src/marginfi/models/: group.rs
blockchain/sol-interface/src/marginfi/utils/: macros.rs  prelude.rs
blockchain/sol-interface/src/save/: client.rs  error.rs  mod.rs
blockchain/sol-interface/src/save/models/: mod.rs  rate_limiter.rs  reserve.rs
common/: Cargo.toml
common/src/: asset_utils.rs  lib.rs  rpc.rs
common/src/lending/: mod.rs
drift/: Cargo.toml
drift/src/: casting.rs  client.rs  custom_types.rs
drift/src/models/: spot_market.rs
idls/: kamino_lending.json
main/: Cargo.toml
main/src/: aggregator.rs  main.rs
main/src/kamino/: client.rs
main/src/kamino/models/: last_update.rs  lending_result.rs  mod.rs  reserve.rs  token_info.rs
main/src/kamino/utils/: borrow_rate_curve.rs  fraction.rs  idl_parser.rs
main/src/marginfi/: client.rs
main/src/marginfi/models/: account.rs  group.rs  price.rs
main/src/marginfi/utils/: constants.rs  mod.rs  utilities.rs
main/src/save/: client.rs
main/src/save/math/: rate.rs
sample-data/: drift-usdc  drift-usdc-1  kamino-jlp  kamino-main  save-jlp  save-main
src/: aggregator.rs  main.rs
src/common/: client_trait.rs  mod.rs
src/drift/: Cargo.toml
src/drift/src/: client.rs  lib.rs
src/drift/src/math/: ceil_div.rs  mod.rs  safe_math.rs
src/drift/src/models/: idl.rs  mod.rs  spot_market.rs
src/kamino/: client.rs  mod.rs
src/kamino/models/: last_update.rs  lending_market.rs  mod.rs  referral.rs  reserve.rs  types.rs
src/kamino/utils/: consts.rs  errors.rs  mod.rs  serde_helpers.rs
src/marginfi/: client.rs
src/marginfi/models/: account.rs  group.rs  mod.rs
src/marginfi/utils/: events.rs
src/save/: client.rs
src/save/math/: decimal.rs
src/save/models/: last_update.rs  lending_market_metadata.rs  obligation.rs  rate_limiter.rs  reserve.rs
worker/: Cargo.toml
worker/src/: lib.rs
