[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
drift = { path = "../drift" }
aggregation = { path = "../aggregation" } 
anchor-client = "0.30.1"
solana-sdk = "1.18.0"
solana-client = "1.18.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
fixed = { version = "1.28.0", features = ["serde"] }
fixed-macro = "1.2.0"
uint = "0.10.0"
solana-program = "2.1.7"
borsh = { version = "1.5.3", features = ["derive"] }
bytemuck = { version = "1.21.0", features = ["min_const_generics", "derive"] }
derivative = "2.2.0"
static_assertions = "1.1.0"
borsh-derive = "1.5.3"
num_enum = "0.7.3"
bitflags = "2.7.0"
lazy_static = "1.5.0"
solana-account-decoder = "1.18.0"
tokio = "1.43.0"
prettytable-rs = "0.10.0"
arrayref = "0.3.9"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0"
rand = "0.8.5"
proptest = "1.6.0"
mpl-token-metadata = "5.1.0"
anchor-lang = { version = "0.30.1", features = ["derive"] }
enum_dispatch = "0.3.13"
type-layout = "0.2.0"
log = "0.4.25"
env_logger = "0.11.6"
