[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
common = { path = "../common" }
anyhow = "1.0.95"
chrono = "0.4.39"
tokio-cron-scheduler = "0.10.0"
log = "0.4"
env_logger = "0.11"
