[package]
name = "chain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
common = { path = "../../common" }
sol-interface = { path = "../sol-interface" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
solana-sdk = "1.18.26"
anchor-client = "0.30.1"
anyhow = "1.0.95"
env_logger = "0.11.6"