[package]
name = "drift"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] } 
solana-sdk = "1.18.26"
bytemuck = { version = "1.21.0", features = ["min_const_generics", "derive"] }
serde_json = "1.0"
solana-client = "1.18.26"
anchor-client = "0.30.1"
prettytable-rs = "0.10.0"
solana-account-decoder = "1.18.26"
fixed = { version = "1.28.0", features = ["serde"] }
fixed-macro = "1.2.0"
uint = "0.9.1"
solana-program = "1.18.26"
num-traits = "0.2"
log = "0.4.25"
env_logger = "0.11.6"
common = { path = "../../common" }
