[package]
name = "drift"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive"] }
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha2 = "0.10.8"
syn = "2.0.96"
serde = { version = "1.0", features = ["derive"] } 
solana-sdk = "1.18.0"
bytemuck = { version = "1.21.0", features = ["min_const_generics", "derive"] }
serde_json = "1.0"