[package]
name = "drift"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] } 
solana-sdk = "1.18.0"
bytemuck = { version = "1.21.0", features = ["min_const_generics", "derive"] }
serde_json = "1.0"
solana-client = "1.18.0"
anchor-client = "0.30.1"
prettytable-rs = "0.10.0"
solana-account-decoder = "1.18.0"
fixed = { version = "1.28.0", features = ["serde"] }
fixed-macro = "1.2.0"
uint = "0.9.1"
solana-program = "2.1.7"
num-traits = "0.2"